<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindBookActivity">

    <LinearLayout
        android:id="@+id/idLLsearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <!--edit text for getting the search
          query for book from user-->
        <EditText
            android:id="@+id/idEdtSearchBooks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/book_title_hint"
            />

        <!--image button for our search button -->
        <ImageButton
            android:id="@+id/idBtnSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_search" />

    </LinearLayout>

    <!--recycler view for displaying our list of books-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRVBooks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/idLLsearch" />

    <!--progressbar for displaying our loading indicator-->
    <ProgressBar
        android:id="@+id/idLoadingPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>

