...
            android:id="@+id/idIVbook"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/idTVBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/idIVbook"
            android:padding="3dp"
            android:text="Book Title"
...
